// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.isValid() sets error 1`] = `"This field is required."`;

exports[`Field.makePristine() empties error 1`] = `"This field is required."`;

exports[`Field.reset() empties error 1`] = `"This field is required."`;

exports[`Field.setAndValidate() sets and validates field 1`] = `"This field is required."`;

exports[`Field.setError() calls onError callback if exists 1`] = `
Array [
  "Nice error !!!",
  Field {
    "config": Object {
      "onError": [Function],
    },
    "currentValue": undefined,
    "defaultValue": undefined,
    "error": "Nice error !!!",
    "initialValue": undefined,
    "previousValue": undefined,
  },
]
`;

exports[`Form.isValid calls onError callback 1`] = `
Array [
  Object {
    "confirmPassword": undefined,
    "name": "\\"Name\\" is required.",
    "password": "\\"Password\\" is required.",
    "username": "\\"Username\\" is required.",
  },
  SignupForm {
    "_fields": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": ConfirmPasswordField {
      "config": Object {
        "field": "password",
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "getNotified": true,
    "name": NameField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "\\"Name\\" is required.",
      "fieldName": "name",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "password": PasswordField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "\\"Password\\" is required.",
      "fieldName": "password",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "username": UsernameField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "\\"Username\\" is required.",
      "fieldName": "username",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
  },
]
`;

exports[`Form.isValid sets error 1`] = `
Object {
  "confirmPassword": undefined,
  "name": "\\"Name\\" is required.",
  "password": "\\"Password\\" is required.",
  "username": "\\"Username\\" is required.",
}
`;

exports[`Form.isValid won't set error if true passed 1`] = `
Object {
  "confirmPassword": undefined,
  "name": undefined,
  "password": undefined,
  "username": undefined,
}
`;

exports[`Form.makePristine empties all the error fields and calls onError callback only once 1`] = `
Object {
  "confirmPassword": undefined,
  "name": "\\"Name\\" is required.",
  "password": "\\"Password\\" is required.",
  "username": undefined,
}
`;

exports[`Form.makePristine empties all the error fields and calls onError callback only once 2`] = `
Object {
  "confirmPassword": undefined,
  "name": undefined,
  "password": undefined,
  "username": undefined,
}
`;

exports[`Form.makePristine empties all the error fields and calls onError callback only once 3`] = `
Object {
  "confirmPassword": undefined,
  "name": undefined,
  "password": undefined,
  "username": "ausername",
}
`;

exports[`Form.setError calls onError callback only once 1`] = `
Array [
  Object {
    "confirmPassword": undefined,
    "name": undefined,
    "password": "a error",
    "username": "a error",
  },
  SignupForm {
    "_fields": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": ConfirmPasswordField {
      "config": Object {
        "field": "password",
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "getNotified": true,
    "name": NameField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "name",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "password": PasswordField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "a error",
      "fieldName": "password",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "username": UsernameField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "a error",
      "fieldName": "username",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
  },
]
`;

exports[`Form.triggerOnChange calls callback with value and form instance 1`] = `
Array [
  Object {
    "confirmPassword": undefined,
    "name": undefined,
    "password": undefined,
    "username": "ausername",
  },
  SignupForm {
    "_fields": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "config": Object {
      "onChange": [Function],
    },
    "confirmPassword": ConfirmPasswordField {
      "config": Object {
        "field": "password",
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "getNotified": true,
    "name": NameField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "name",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "password": PasswordField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "password",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "username": UsernameField {
      "config": Object {},
      "currentValue": "ausername",
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "username",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
  },
]
`;

exports[`Form.triggerOnError calls callback with value and form instance 1`] = `
Array [
  Object {
    "confirmPassword": undefined,
    "name": undefined,
    "password": undefined,
    "username": "an error",
  },
  SignupForm {
    "_fields": Array [
      "username",
      "name",
      "password",
      "confirmPassword",
    ],
    "config": Object {
      "onError": [Function],
    },
    "confirmPassword": ConfirmPasswordField {
      "config": Object {
        "field": "password",
      },
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "confirmPassword",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "getNotified": true,
    "name": NameField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "name",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "password": PasswordField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": undefined,
      "fieldName": "password",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
    "username": UsernameField {
      "config": Object {},
      "currentValue": undefined,
      "defaultValue": undefined,
      "error": "an error",
      "fieldName": "username",
      "initialValue": undefined,
      "parent": [Circular],
      "previousValue": undefined,
    },
  },
]
`;
